# wreck

./: .gitignore  CMakeLists.txt  README.md
assets/: diffuse.fs  diffuse.vs  lambert.fs  lambert.vs  test.lua  textured_diffuse.fs  textured_diffuse.vs  uvpattern.dds
core/: CMakeLists.txt  string.cpp  string.h  transform.cpp
demo/: CMakeLists.txt
demo/cameratest/: main.cpp
demo/diffusetriangle/: diffusetriangleapp.cpp  diffusetriangleapp.h  main.cpp
demo/lambert/: main.cpp
demo/luatest/: main.cpp
demo/objmesh/: main.cpp
demo/texturedtriangle/: main.cpp
engine/: CMakeLists.txt  basicapplication.cpp  basicapplication.h  camera.cpp  camera.h  cameratransform.cpp  cameratransform.h  config.cpp  config.h  entity.cpp  entity.h  fragmentshader.cpp  fragmentshader.h  light.cpp  light.h  mesh.cpp  mesh.h  shader.cpp  shader.h  shaderprogram.cpp  shaderprogram.h  texture.cpp  texture.h  transform.cpp  transform.h  vertex.cpp  vertex.h  vertexshader.cpp  vertexshader.h  wavefrontmeshfactory.cpp  wavefrontmeshfactory.h
graphics/: CMakeLists.txt  fragmentshader.cpp  fragmentshader.h  shader.cpp  shader.h  shaderprogram.cpp  texture.cpp  texture.h  vertex.cpp  vertexshader.cpp  vertexshader.h  wavefrontmeshfactory.cpp
test/: CMakeLists.txt  configtest.cpp
